--- a/main.html
+++ b/main.html
@@ -8,8 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<ol>
+		<li> Shoping List</li><br>
+			<ol>
+				<li data-ns-test="shoppingList"> Butter</li>
+				<li data-item-type="shoppingList">Eggs</li>
+				<li data-item-test="shoppingList">Maggie</li>
+			</ol>
+	</ol>
+	<ul>
+		<li> Holiday List</li><br>
+			<ul>
+				<li data-ns-test="holidayList">Goa</li>
+				<li data-item-type="holidayList">Russia</li>
+				<li data-item-test="holidayList">Paris</li>
+			</ul>
+	</ul>
+	
+	
 
 </body>
 
