--- a/main.html
+++ b/main.html
@@ -9,22 +9,20 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
-	<ol>
-		<li> Shoping List</li><br>
-			<ol>
-				<li data-ns-test="shoppingList"> Butter</li>
-				<li data-item-type="shoppingList">Eggs</li>
-				<li data-item-test="shoppingList">Maggie</li>
-			</ol>
-	</ol>
-	<ul>
-		<li> Holiday List</li><br>
-			<ul>
-				<li data-ns-test="holidayList">Goa</li>
-				<li data-item-type="holidayList">Russia</li>
-				<li data-item-test="holidayList">Paris</li>
-			</ul>
-	</ul>
+	
+	<h2>Shopping List</h2>
+    <ol>
+      <li data-ns-test="shoppingList">A new laptop</li>
+      <li data-ns-test="shoppingList">A set of dumbbells</li>
+      <li data-ns-test="shoppingList">A pair of running shoes</li>
+    </ol>
+	
+    <h2>Holiday List</h2>
+    <ul>
+      <li data-ns-test="holidayList">Bali, Indonesia</li>
+      <li data-ns-test="holidayList">Machu Picchu, Peru</li>
+      <li data-ns-test="holidayList">Santorini, Greece</li>
+    </ul>
 	
 	
 
